<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.reznikap.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.reznikap.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.reznikap.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.reznikap.mireaproject.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.reznikap.mireaproject.WebViewFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_web_view" />

    <fragment
        android:id="@+id/nav_background_task"
        android:name="ru.mirea.reznikap.mireaproject.BackgroundTaskFragment"
        android:label="Background Task"
        tools:layout="@layout/fragment_background_task" />

    <fragment
        android:id="@+id/nav_hardware"
        android:name="ru.mirea.reznikap.mireaproject.HardwareFragment"
        android:label ="@string/hardware"
        tools:layout="@layout/fragment_hardware">
        <action
            android:id="@+id/action_nav_hardware_to_nav_sensor"
            app:destination="@id/nav_sensor" />
        <action
            android:id="@+id/action_nav_hardware_to_nav_camera"
            app:destination="@id/nav_camera" />
        <action
            android:id="@+id/action_nav_hardware_to_nav_microphone"
            app:destination="@id/nav_microphone" />
    </fragment>

    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.reznikap.mireaproject.SensorFragment"
        android:label="Датчик: Определение севера"
        tools:layout="@layout/fragment_sensor" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.reznikap.mireaproject.CameraFragment"
        android:label="Камера: Создание коллажа"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_microphone"
        android:name="ru.mirea.reznikap.mireaproject.MicrophoneFragment"
        android:label="Микрофон: Аудиозаметка"
        tools:layout="@layout/fragment_microphone" />
</navigation>